// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`packAnimal center option can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50.000000000000014%;
        height: 50.000000000000014%;
        z-index: 12;
        transform: translateX(2.8421709430403998e-14%) translateY(2.8421709430403998e-14%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":7.105427357601002e-15,
      \\"f\\":7.105427357601002e-15
    }",
    "points": Array [
      Object {
        "x": -1.7763568394002505e-15,
        "y": -1.7763568394002505e-15,
      },
      Object {
        "x": 25.000000000000007,
        "y": -1.7763568394002505e-15,
      },
      Object {
        "x": 12.499999999999998,
        "y": 25.000000000000007,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,7.105427357601002e-15,7.105427357601002e-15)",
    "translateX": 7.105427357601002e-15,
    "translateY": 7.105427357601002e-15,
    "zIndex": 12,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35.71428571428572%;
        height: 35.71428571428572%;
        z-index: 25;
        transform: translateX(90.00000000000004%) translateY(90.00000000000004%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.5714285714285716,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.5714285714285716,
      \\"e\\":16.071428571428584,
      \\"f\\":16.071428571428584
    }",
    "points": Array [
      Object {
        "x": 16.071428571428584,
        "y": 16.071428571428584,
      },
      Object {
        "x": 33.928571428571445,
        "y": 16.071428571428584,
      },
      Object {
        "x": 33.928571428571445,
        "y": 33.928571428571445,
      },
      Object {
        "x": 16.071428571428584,
        "y": 33.928571428571445,
      },
    ],
    "rotate": -0,
    "scale": 3.5714285714285716,
    "svgTransform": "matrix(3.5714285714285716,0,0,3.5714285714285716,16.071428571428584,16.071428571428584)",
    "translateX": 16.071428571428584,
    "translateY": 16.071428571428584,
    "zIndex": 25,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50%;
        height: 50%;
        z-index: 37;
        transform: translateX(100.00000000000003%) translateY(100.00000000000003%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":25.000000000000007,
      \\"f\\":25.000000000000007
    }",
    "points": Array [
      Object {
        "x": 25.000000000000007,
        "y": 25.000000000000007,
      },
      Object {
        "x": 50.00000000000001,
        "y": 25.000000000000007,
      },
      Object {
        "x": 37.50000000000001,
        "y": 50.00000000000001,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,25.000000000000007,25.000000000000007)",
    "translateX": 25.000000000000007,
    "translateY": 25.000000000000007,
    "zIndex": 37,
  },
]
`;

exports[`packAnimal it works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50%;
        height: 50%;
        z-index: 12;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 0,
      },
      Object {
        "x": 12.5,
        "y": 25,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 12,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35.714285714285744%;
        height: 35.714285714285744%;
        z-index: 24;
        transform: translateX(89.99999999999983%) translateY(89.99999999999983%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.5714285714285716,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.5714285714285716,
      \\"e\\":16.071428571428555,
      \\"f\\":16.071428571428555
    }",
    "points": Array [
      Object {
        "x": 16.07142857142856,
        "y": 16.07142857142856,
      },
      Object {
        "x": 33.92857142857143,
        "y": 16.07142857142856,
      },
      Object {
        "x": 33.92857142857143,
        "y": 33.92857142857143,
      },
      Object {
        "x": 16.07142857142856,
        "y": 33.92857142857143,
      },
    ],
    "rotate": -0,
    "scale": 3.5714285714285716,
    "svgTransform": "matrix(3.5714285714285716,0,0,3.5714285714285716,16.071428571428555,16.071428571428555)",
    "translateX": 16.071428571428555,
    "translateY": 16.071428571428555,
    "zIndex": 24,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50.000000000000014%;
        height: 50.000000000000014%;
        z-index: 37;
        transform: translateX(99.99999999999994%) translateY(99.99999999999994%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":24.999999999999993,
      \\"f\\":24.999999999999993
    }",
    "points": Array [
      Object {
        "x": 24.999999999999993,
        "y": 24.999999999999993,
      },
      Object {
        "x": 50,
        "y": 24.999999999999993,
      },
      Object {
        "x": 37.5,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,24.999999999999993,24.999999999999993)",
    "translateX": 24.999999999999993,
    "translateY": 24.999999999999993,
    "zIndex": 37,
  },
]
`;

exports[`packAnimal it works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 100%;
        height: 100%;
        z-index: 250000000025;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":10,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":10,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 50,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 10,
    "svgTransform": "matrix(10,0,0,10,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 250000000025,
  },
]
`;

exports[`packAnimal it works 3`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.57142857142857%;
        height: 28.57142857142856%;
        z-index: 7;
        transform: translateX(100%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8571428571428563,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8571428571428563,
      \\"e\\":14.285714285714285,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 14.285714285714292,
        "y": 1.2688263138573214e-15,
      },
      Object {
        "x": 28.571428571428577,
        "y": 1.2688263138573214e-15,
      },
      Object {
        "x": 21.428571428571423,
        "y": 14.285714285714281,
      },
    ],
    "rotate": -0,
    "scale": 2.8571428571428563,
    "svgTransform": "matrix(2.8571428571428563,0,0,2.8571428571428563,14.285714285714285,0)",
    "translateX": 14.285714285714285,
    "translateY": 0,
    "zIndex": 7,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 20.408163265306108%;
        height: 20.408163265306115%;
        z-index: 14;
        transform: translateX(230.0000000000001%) translateY(90.00000000000011%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.040816326530612,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.040816326530612,
      \\"e\\":23.469387755102034,
      \\"f\\":9.183673469387763
    }",
    "points": Array [
      Object {
        "x": 23.469387755102037,
        "y": 9.18367346938777,
      },
      Object {
        "x": 33.67346938775509,
        "y": 9.18367346938777,
      },
      Object {
        "x": 33.67346938775509,
        "y": 19.387755102040828,
      },
      Object {
        "x": 23.469387755102037,
        "y": 19.387755102040828,
      },
    ],
    "rotate": -0,
    "scale": 2.040816326530612,
    "svgTransform": "matrix(2.040816326530612,0,0,2.040816326530612,23.469387755102034,9.183673469387763)",
    "translateX": 23.469387755102034,
    "translateY": 9.183673469387763,
    "zIndex": 14,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.57142857142857%;
        height: 28.571428571428566%;
        z-index: 21;
        transform: translateX(100%) translateY(99.99999999999997%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8571428571428563,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8571428571428563,
      \\"e\\":14.285714285714285,
      \\"f\\":14.285714285714278
    }",
    "points": Array [
      Object {
        "x": 14.285714285714292,
        "y": 14.285714285714278,
      },
      Object {
        "x": 28.571428571428577,
        "y": 14.285714285714278,
      },
      Object {
        "x": 21.428571428571423,
        "y": 28.57142857142856,
      },
    ],
    "rotate": -0,
    "scale": 2.8571428571428563,
    "svgTransform": "matrix(2.8571428571428563,0,0,2.8571428571428563,14.285714285714285,14.285714285714278)",
    "translateX": 14.285714285714285,
    "translateY": 14.285714285714278,
    "zIndex": 21,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.571428571428577%;
        height: 28.571428571428513%;
        z-index: 28;
        transform: translateX(149.99999999999994%) translateY(150.00000000000026%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8571428571428563,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8571428571428563,
      \\"e\\":21.428571428571423,
      \\"f\\":21.428571428571423
    }",
    "points": Array [
      Object {
        "x": 21.428571428571427,
        "y": 21.428571428571438,
      },
      Object {
        "x": 35.714285714285715,
        "y": 21.428571428571438,
      },
      Object {
        "x": 28.571428571428566,
        "y": 35.714285714285694,
      },
    ],
    "rotate": -0,
    "scale": 2.8571428571428563,
    "svgTransform": "matrix(2.8571428571428563,0,0,2.8571428571428563,21.428571428571423,21.428571428571423)",
    "translateX": 21.428571428571423,
    "translateY": 21.428571428571423,
    "zIndex": 28,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 20.408163265306115%;
        height: 20.408163265306143%;
        z-index: 35;
        transform: translateX(159.99999999999997%) translateY(299.99999999999966%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.040816326530612,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.040816326530612,
      \\"e\\":16.326530612244888,
      \\"f\\":30.61224489795918
    }",
    "points": Array [
      Object {
        "x": 16.326530612244895,
        "y": 30.612244897959187,
      },
      Object {
        "x": 26.530612244897952,
        "y": 30.612244897959187,
      },
      Object {
        "x": 26.530612244897952,
        "y": 40.81632653061226,
      },
      Object {
        "x": 16.326530612244895,
        "y": 40.81632653061226,
      },
    ],
    "rotate": -0,
    "scale": 2.040816326530612,
    "svgTransform": "matrix(2.040816326530612,0,0,2.040816326530612,16.326530612244888,30.61224489795918)",
    "translateX": 16.326530612244888,
    "translateY": 30.61224489795918,
    "zIndex": 35,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 28.571428571428577%;
        height: 28.57142857142858%;
        z-index: 42;
        transform: translateX(149.99999999999994%) translateY(249.99999999999991%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":2.8571428571428563,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":2.8571428571428563,
      \\"e\\":21.428571428571423,
      \\"f\\":35.714285714285715
    }",
    "points": Array [
      Object {
        "x": 21.428571428571427,
        "y": 35.71428571428571,
      },
      Object {
        "x": 35.714285714285715,
        "y": 35.71428571428571,
      },
      Object {
        "x": 28.571428571428566,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 2.8571428571428563,
    "svgTransform": "matrix(2.8571428571428563,0,0,2.8571428571428563,21.428571428571423,35.714285714285715)",
    "translateX": 21.428571428571423,
    "translateY": 35.714285714285715,
    "zIndex": 42,
  },
]
`;

exports[`packAnimal jitter option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 4.996219511568215%;
        height: 4.996219511568206%;
        z-index: 13;
        transform: translateX(-8.532964583900857e-13%) translateY(490.67670243996855%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.49962195115682156,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.49962195115682156,
      \\"e\\":-2.1316282072803006e-14,
      \\"f\\":12.257642573012589
    }",
    "points": Array [
      Object {
        "x": -2.2203788942854924e-14,
        "y": 12.257642573012589,
      },
      Object {
        "x": 2.4981097557840855,
        "y": 12.257642573012589,
      },
      Object {
        "x": 1.2490548778920316,
        "y": 14.755752328796692,
      },
    ],
    "rotate": -0,
    "scale": 0.49962195115682156,
    "svgTransform": "matrix(0.49962195115682156,0,0,0.49962195115682156,-2.1316282072803006e-14,12.257642573012589)",
    "translateX": -2.1316282072803006e-14,
    "translateY": 12.257642573012589,
    "zIndex": 13,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 4.876416718906611%;
        height: 4.8764167189066185%;
        z-index: 15;
        transform: translateX(1655.4154594136062%) translateY(599.1978907210263%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.48764167189066115,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.48764167189066115,
      \\"e\\":40.36247811510489,
      \\"f\\":14.609693061227969
    }",
    "points": Array [
      Object {
        "x": 40.36247811510489,
        "y": 14.609693061227969,
      },
      Object {
        "x": 42.8006864745582,
        "y": 14.609693061227969,
      },
      Object {
        "x": 42.8006864745582,
        "y": 17.047901420681278,
      },
      Object {
        "x": 40.36247811510489,
        "y": 17.047901420681278,
      },
    ],
    "rotate": -0,
    "scale": 0.48764167189066115,
    "svgTransform": "matrix(0.48764167189066115,0,0,0.48764167189066115,40.36247811510489,14.609693061227969)",
    "translateX": 40.36247811510489,
    "translateY": 14.609693061227969,
    "zIndex": 15,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 6.727403486453241%;
        height: 6.727403486453226%;
        z-index: 36;
        transform: translateX(1386.4575939493877%) translateY(1022.0482762179519%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.6727403486453222,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.6727403486453222,
      \\"e\\":46.636298256773415,
      \\"f\\":34.3786556837608
    }",
    "points": Array [
      Object {
        "x": 46.636298256773415,
        "y": 34.3786556837608,
      },
      Object {
        "x": 50.000000000000036,
        "y": 34.3786556837608,
      },
      Object {
        "x": 48.31814912838672,
        "y": 37.74235742698741,
      },
    ],
    "rotate": -0,
    "scale": 0.6727403486453222,
    "svgTransform": "matrix(0.6727403486453222,0,0,0.6727403486453222,46.636298256773415,34.3786556837608)",
    "translateX": 46.636298256773415,
    "translateY": 34.3786556837608,
    "zIndex": 36,
  },
]
`;

exports[`packAnimal jitter option works 2`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 43.65705667041972%;
        height: 49.058467682865576%;
        z-index: 13;
        transform: translateX(1.4815410461925125%) translateY(28.268232490005147%) rotate(-13.898507049307238deg)
      ",
    "matrix": "{
      \\"a\\":4.36570566704197,
      \\"b\\":-1.0802822024891696,
      \\"c\\":1.0802822024891696,
      \\"d\\":4.36570566704197,
      \\"e\\":0.3233986070658972,
      \\"f\\":6.93398085031324
    }",
    "points": Array [
      Object {
        "x": 0.32339860706589696,
        "y": 6.933980850313239,
      },
      Object {
        "x": 22.151926942275757,
        "y": 1.5325698378673884,
      },
      Object {
        "x": 16.63907378711668,
        "y": 26.061803679300176,
      },
    ],
    "rotate": -13.898507049307238,
    "scale": 4.497376525070725,
    "svgTransform": "matrix(4.36570566704197,-1.0802822024891696,1.0802822024891696,4.36570566704197,0.3233986070658972,6.93398085031324)",
    "translateX": 0.3233986070658972,
    "translateY": 6.93398085031324,
    "zIndex": 13,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 40.35519391778423%;
        height: 40.35519391778422%;
        z-index: 26;
        transform: translateX(97.45245151183622%) translateY(80.04554730991943%) rotate(17.65875509940086deg)
      ",
    "matrix": "{
      \\"a\\":3.0610432660032454,
      \\"b\\":0.9744761257751731,
      \\"c\\":-0.9744761257751731,
      \\"d\\":3.0610432660032454,
      \\"e\\":19.663562892618074,
      \\"f\\":16.15126791973485
    }",
    "points": Array [
      Object {
        "x": 19.663562892618078,
        "y": 16.151267919734856,
      },
      Object {
        "x": 34.96877922263432,
        "y": 21.023648548610723,
      },
      Object {
        "x": 30.09639859375845,
        "y": 36.328864878626966,
      },
      Object {
        "x": 14.791182263742204,
        "y": 31.456484249751092,
      },
    ],
    "rotate": 17.65875509940086,
    "scale": 3.2124118036219462,
    "svgTransform": "matrix(3.0610432660032454,0.9744761257751731,-0.9744761257751731,3.0610432660032454,19.663562892618074,16.15126791973485)",
    "translateX": 19.663562892618074,
    "translateY": 16.15126791973485,
    "zIndex": 26,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 43.24575307360055%;
        height: 49.41917193843738%;
        z-index: 36;
        transform: translateX(129.7409473174802%) translateY(96.14828926113789%) rotate(15.934258867055156deg)
      ",
    "matrix": "{
      \\"a\\":4.324575307360053,
      \\"b\\":1.2346837729673636,
      \\"c\\":-1.2346837729673636,
      \\"d\\":4.324575307360053,
      \\"e\\":28.053724856133833,
      \\"f\\":23.75784419291393
    }",
    "points": Array [
      Object {
        "x": 28.05372485613383,
        "y": 23.757844192913925,
      },
      Object {
        "x": 49.6766013929341,
        "y": 29.931263057750748,
      },
      Object {
        "x": 32.691744259697145,
        "y": 48.467430162132615,
      },
    ],
    "rotate": 15.934258867055156,
    "scale": 4.497376525070724,
    "svgTransform": "matrix(4.324575307360053,1.2346837729673636,-1.2346837729673636,4.324575307360053,28.053724856133833,23.75784419291393)",
    "translateX": 28.053724856133833,
    "translateY": 23.75784419291393,
    "zIndex": 36,
  },
]
`;

exports[`packAnimal margin option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 47.916666666666686%;
        height: 47.916666666666686%;
        z-index: 11;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.791666666666668,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.791666666666668,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 23.958333333333343,
        "y": 0,
      },
      Object {
        "x": 11.979166666666671,
        "y": 23.958333333333343,
      },
    ],
    "rotate": -0,
    "scale": 4.791666666666668,
    "svgTransform": "matrix(4.791666666666668,0,0,4.791666666666668,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 11,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.035714285714334%;
        height: 33.035714285714334%;
        z-index: 250000000025;
        transform: translateX(101.35135135135111%) translateY(101.35135135135111%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.3035714285714297,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.3035714285714297,
      \\"e\\":16.741071428571413,
      \\"f\\":16.741071428571413
    }",
    "points": Array [
      Object {
        "x": 16.741071428571416,
        "y": 16.741071428571416,
      },
      Object {
        "x": 33.258928571428584,
        "y": 16.741071428571416,
      },
      Object {
        "x": 33.258928571428584,
        "y": 33.258928571428584,
      },
      Object {
        "x": 16.741071428571416,
        "y": 33.258928571428584,
      },
    ],
    "rotate": -0,
    "scale": 3.3035714285714297,
    "svgTransform": "matrix(3.3035714285714297,0,0,3.3035714285714297,16.741071428571413,16.741071428571413)",
    "translateX": 16.741071428571413,
    "translateY": 16.741071428571413,
    "zIndex": 250000000025,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 47.91666666666669%;
        height: 47.91666666666669%;
        z-index: 38;
        transform: translateX(108.69565217391293%) translateY(108.69565217391293%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.791666666666668,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.791666666666668,
      \\"e\\":26.041666666666654,
      \\"f\\":26.041666666666654
    }",
    "points": Array [
      Object {
        "x": 26.041666666666654,
        "y": 26.041666666666654,
      },
      Object {
        "x": 50,
        "y": 26.041666666666654,
      },
      Object {
        "x": 38.02083333333332,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 4.791666666666668,
    "svgTransform": "matrix(4.791666666666668,0,0,4.791666666666668,26.041666666666654,26.041666666666654)",
    "translateX": 26.041666666666654,
    "translateY": 26.041666666666654,
    "zIndex": 38,
  },
]
`;

exports[`packAnimal maximizing can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666664%;
        height: 11.666666666666664%;
        z-index: 250000000025;
        transform: translateX(378.57142857142867%) translateY(378.57142857142867%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":22.083333333333332,
      \\"f\\":22.083333333333332
    }",
    "points": Array [
      Object {
        "x": 22.083333333333332,
        "y": 22.083333333333332,
      },
      Object {
        "x": 27.916666666666664,
        "y": 22.083333333333332,
      },
      Object {
        "x": 25,
        "y": 27.916666666666664,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,22.083333333333332,22.083333333333332)",
    "translateX": 22.083333333333332,
    "translateY": 22.083333333333332,
    "zIndex": 250000000025,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 8.333333333333336%;
        height: 8.333333333333336%;
        z-index: 27;
        transform: translateX(619.9999999999998%) translateY(619.9999999999998%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":0.8333333333333334,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":0.8333333333333334,
      \\"e\\":25.833333333333332,
      \\"f\\":25.833333333333332
    }",
    "points": Array [
      Object {
        "x": 25.833333333333332,
        "y": 25.833333333333332,
      },
      Object {
        "x": 30,
        "y": 25.833333333333332,
      },
      Object {
        "x": 30,
        "y": 30,
      },
      Object {
        "x": 25.833333333333332,
        "y": 30,
      },
    ],
    "rotate": -0,
    "scale": 0.8333333333333334,
    "svgTransform": "matrix(0.8333333333333334,0,0,0.8333333333333334,25.833333333333332,25.833333333333332)",
    "translateX": 25.833333333333332,
    "translateY": 25.833333333333332,
    "zIndex": 27,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 11.666666666666671%;
        height: 11.666666666666671%;
        z-index: 30;
        transform: translateX(478.57142857142827%) translateY(478.57142857142827%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":1.1666666666666667,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":1.1666666666666667,
      \\"e\\":27.916666666666664,
      \\"f\\":27.916666666666664
    }",
    "points": Array [
      Object {
        "x": 27.916666666666664,
        "y": 27.916666666666664,
      },
      Object {
        "x": 33.75,
        "y": 27.916666666666664,
      },
      Object {
        "x": 30.833333333333332,
        "y": 33.75,
      },
    ],
    "rotate": -0,
    "scale": 1.1666666666666667,
    "svgTransform": "matrix(1.1666666666666667,0,0,1.1666666666666667,27.916666666666664,27.916666666666664)",
    "translateX": 27.916666666666664,
    "translateY": 27.916666666666664,
    "zIndex": 30,
  },
]
`;

exports[`packAnimal postPackPolygonScale option works 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 47.368421052631575%;
        height: 47.368421052631575%;
        z-index: 11;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.7368421052631575,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.7368421052631575,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 23.684210526315788,
        "y": 0,
      },
      Object {
        "x": 11.842105263157892,
        "y": 23.684210526315788,
      },
    ],
    "rotate": -0,
    "scale": 4.7368421052631575,
    "svgTransform": "matrix(4.7368421052631575,0,0,4.7368421052631575,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 11,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 33.83458646616544%;
        height: 33.83458646616544%;
        z-index: 250000000025;
        transform: translateX(97.77777777777759%) translateY(97.77777777777759%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.3834586466165413,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.3834586466165413,
      \\"e\\":16.541353383458627,
      \\"f\\":16.541353383458627
    }",
    "points": Array [
      Object {
        "x": 16.541353383458638,
        "y": 16.541353383458638,
      },
      Object {
        "x": 33.45864661654136,
        "y": 16.541353383458638,
      },
      Object {
        "x": 33.45864661654136,
        "y": 33.45864661654136,
      },
      Object {
        "x": 16.541353383458638,
        "y": 33.45864661654136,
      },
    ],
    "rotate": -0,
    "scale": 3.3834586466165413,
    "svgTransform": "matrix(3.3834586466165413,0,0,3.3834586466165413,16.541353383458627,16.541353383458627)",
    "translateX": 16.541353383458627,
    "translateY": 16.541353383458627,
    "zIndex": 250000000025,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 47.36842105263157%;
        height: 47.36842105263157%;
        z-index: 38;
        transform: translateX(111.11111111111111%) translateY(111.11111111111111%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":4.7368421052631575,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":4.7368421052631575,
      \\"e\\":26.315789473684205,
      \\"f\\":26.315789473684205
    }",
    "points": Array [
      Object {
        "x": 26.3157894736842,
        "y": 26.3157894736842,
      },
      Object {
        "x": 49.999999999999986,
        "y": 26.3157894736842,
      },
      Object {
        "x": 38.157894736842096,
        "y": 49.999999999999986,
      },
    ],
    "rotate": -0,
    "scale": 4.7368421052631575,
    "svgTransform": "matrix(4.7368421052631575,0,0,4.7368421052631575,26.315789473684205,26.315789473684205)",
    "translateX": 26.315789473684205,
    "translateY": 26.315789473684205,
    "zIndex": 38,
  },
]
`;

exports[`packAnimal rotation can be disabled 1`] = `
Array [
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50%;
        height: 50%;
        z-index: 12;
        transform: translateX(0%) translateY(0%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":0,
      \\"f\\":0
    }",
    "points": Array [
      Object {
        "x": 0,
        "y": 0,
      },
      Object {
        "x": 25,
        "y": 0,
      },
      Object {
        "x": 12.5,
        "y": 25,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,0,0)",
    "translateX": 0,
    "translateY": 0,
    "zIndex": 12,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 35.714285714285744%;
        height: 35.714285714285744%;
        z-index: 24;
        transform: translateX(89.99999999999983%) translateY(89.99999999999983%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":3.5714285714285716,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":3.5714285714285716,
      \\"e\\":16.071428571428555,
      \\"f\\":16.071428571428555
    }",
    "points": Array [
      Object {
        "x": 16.07142857142856,
        "y": 16.07142857142856,
      },
      Object {
        "x": 33.92857142857143,
        "y": 16.07142857142856,
      },
      Object {
        "x": 33.92857142857143,
        "y": 33.92857142857143,
      },
      Object {
        "x": 16.07142857142856,
        "y": 33.92857142857143,
      },
    ],
    "rotate": -0,
    "scale": 3.5714285714285716,
    "svgTransform": "matrix(3.5714285714285716,0,0,3.5714285714285716,16.071428571428555,16.071428571428555)",
    "translateX": 16.071428571428555,
    "translateY": 16.071428571428555,
    "zIndex": 24,
  },
  Object {
    "cssText": "
        position: absolute;
        top: 0;
        left: 0;
        transform-origin: 0 0;
        width: 50.000000000000014%;
        height: 50.000000000000014%;
        z-index: 37;
        transform: translateX(99.99999999999994%) translateY(99.99999999999994%) rotate(0deg)
      ",
    "matrix": "{
      \\"a\\":5,
      \\"b\\":0,
      \\"c\\":0,
      \\"d\\":5,
      \\"e\\":24.999999999999993,
      \\"f\\":24.999999999999993
    }",
    "points": Array [
      Object {
        "x": 24.999999999999993,
        "y": 24.999999999999993,
      },
      Object {
        "x": 50,
        "y": 24.999999999999993,
      },
      Object {
        "x": 37.5,
        "y": 50,
      },
    ],
    "rotate": -0,
    "scale": 5,
    "svgTransform": "matrix(5,0,0,5,24.999999999999993,24.999999999999993)",
    "translateX": 24.999999999999993,
    "translateY": 24.999999999999993,
    "zIndex": 37,
  },
]
`;
